crates/macro-tools/tests/ui/builder/fail/tuple_struct.rs
use picea_macro_tools::Builder;

#[derive(Builder)]
struct Meta(String);

fn main() {}
